# rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml
.github/workflows/: release.yml  test.yml
examples/: basic.rs  basic_blocking.rs
src/: blocking.rs  config.rs  error.rs  http.rs  lib.rs
src/services/: address.rs  courier.rs  coverage_area.rs  credit.rs  mod.rs  payment.rs  pickup.rs
src/services/order/: express.rs  instant.rs  mod.rs
src/types/: address.rs  api_response.rs  courier.rs  coverage_area.rs  credit.rs  mod.rs  order.rs  payment.rs  pickup.rs
src/utils/: mod.rs  volumetric.rs
tests/: blocking.rs  integration.rs
tests/common/: mod.rs
