[package]
name = "kiriminaja"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Official Rust SDK for the KiriminAja logistics API"
license = "MIT"
repository = "https://github.com/kiriminaja/rust"
readme = "README.md"
keywords = ["kiriminaja", "logistics", "shipping", "api", "sdk"]
categories = ["api-bindings"]

[features]
default = []
# Provides a synchronous facade (`kiriminaja::blocking`) for callers that
# don't want to deal with async/await. Pulls in a small Tokio runtime.
blocking = ["tokio/rt"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "basic_blocking"
path = "examples/basic_blocking.rs"
required-features = ["blocking"]

[package.metadata.docs.rs]
all-features = true